# MNMGDatalog

./: .clang-format  CLAUDE.md  CMakeLists.txt  README.md  generate_graphs.py  perlmutter.md
benchmarks/: sg.cu  sg_nl.cu  single_join.cu  tc.cu  tc_nl.cu  wcc.cu
include/: LIBRARY.md  comm.cuh  error_handler.cuh  hash_table.cuh  join.cuh  kernels.cuh  mnmg.cuh  parallel_io.cuh  timestamp_util.h  utils.cuh
logs/: power.md  power_sg.csv  power_tc.csv
misc/: Dockerfile  binary_file_utils.py  generate_data.py  helpsheet.md  parse_results.py  power-job-output.txt  power.py  power.sh  power_report.csv  power_report_samples.csv  power_time.py  requirements.txt  requirements_cudf.txt  row_size.cpp  set_affinity_gpu_polaris.sh  single-join-small-job.sh  small-merged-job.sh  tc-slog.sh  tc_power.csv
rough/: README.md
tests/: PXJLog.cu  single_join.cu  tc.cu
tests/benchmarks/: sg.cu  sg_nl.cu  single_join.cu  tc.cu  tc_nl.cu  wcc.cu
